--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "cmake.sourceDirectory": "/Users/seongho/Documents/workspaces/cleansweep/cpps"
+  "cmake.sourceDirectory": "${workspaceFolder}/cpps",
+  "cmake.environment": {
+    "EMSDK": "${workspaceFolder}/emsdk"
+  }
 }
