--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.8.2",
+    "typescript": "^5.6.3",
     "vite": "^5.4.1"
   },
   "dependencies": {
