fix: fix minor tsconfig errors

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -16,6 +16,8 @@
 
     /* Type Checking */
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "outDir": "./dist"
   }
 }
